[metadata]
name = eat_api
version = 0.1
summary = Dinner Recommendation Service
description-file =
    README.md
author = Amit Gandhi - drawbuildplay.com
author-email = amit.gandhi@drawbuildplay.com
home-page = https://github.com/amitgandhinz/eat
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[files]
packages =
    

[entry_points]
console_scripts =

[nosetests]
where=tests
exclude=
verbosity=2

with-doctest = true

cover-package = eat
cover-html = true
cover-erase = true
cover-inclusive = true

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1


[wheel]
universal = 1
